Fix `<hr>` not showing when direct child of a card

--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -58,6 +58,11 @@
             }
         }
     }
+
+    > hr {
+        margin-right: 0;
+        margin-left: 0;
+    }
 }
 
 // Optional textual caps
